--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Fihri</title>
+    <title>Abdellah Fihri portfolio</title>
   </head>
   <script src="https://use.fontawesome.com/6f5bfcd7cd.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
